<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating\t\t\t\t\t:\t%s</string>
    <string name="episode">Episodes\t\t\t:\t%s</string>
    <string name="status">Status\t\t\t\t\t:\t%s</string>
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="insert_anime_title">Insert Anime Title Here…</string>
    <string name="search">Search</string>
    <string name="placeholder_title">%s\t:</string>
    <string name="cover_image">Cover Image</string>
    <string name="type">Type</string>
    <string name="episode_detail">Episode</string>
    <string name="genre">Genre</string>
    <string name="status_detail">Status</string>
    <string name="rank_and_score">#%s - %s</string>
    <string name="information_value">:\t%s</string>
    <string name="characters_holder">Characters\t:</string>
    <string name="aired">Aired</string>
    <string name="not_found">No Result Found</string>
    <string name="no_information_by_mal">No information provided by the MAL Website</string>
    <string name="no_nickname">This character has no nicknames</string>
</resources>